UI shows up, but no temples returned
